--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="nav">
                 <div class="nav-right">
-                    <a class="nav-logo" href="#"><img src="images/nixon.png" alt="nixon"></a>
+                    <a class="nav-logo" href="#"><img src="images/nixon.png" loading="lazy" alt="nixon"></a>
                     <ui class="menu">
                         <li class="menu__item menu__item--active">
                             <a href="#" class="menu__link">صفحه اصلی </a>
@@ -124,7 +124,7 @@
             <section class="products">
                 <div class="products-item">
                     <a href="#" class="products-item__link">
-                      <img src="images/image3.jpg" alt="watch" class="products-item__image" />
+                      <img src="images/image3.jpg" alt="watch" loading="lazy" class="products-item__image" />
                       <div class="middle-box">
                         <h4>ساعت</h4>
                         <h5>ساعتی شیک برای همه</h5>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="products-item">
                     <a href="#" class="products-item__link">
-                      <img src="images/image1.jpg" alt="watch" class="products-item__image" />
+                      <img src="images/image1.jpg" alt="watch" loading="lazy" class="products-item__image" />
                       <div class="middle-box">
                         <h4>کیف</h4>
                         <h5>کیفی سبک برای همه</h5>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="products-item">
                     <a href="#" class="products-item__link">
-                      <img src="images/image2.jpg" alt="watch" class="products-item__image" />
+                      <img src="images/image2.jpg" alt="watch" loading="lazy" class="products-item__image" />
                       <div class="middle-box">
                         <h4>کلاه</h4>
                         <h5>بهترین را بر سر بگذارید</h5>
@@ -165,7 +165,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/01-1.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/01-1.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۳۳٪</span>
@@ -217,7 +217,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/02-1.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/02-1.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۲۰٪</span>
@@ -269,7 +269,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/03-4.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/03-4.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۲۵٪</span>
@@ -321,7 +321,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/04-1.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/04-1.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer badge-new ">
                                 <span>جدید</span>
@@ -373,7 +373,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/01-2.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/01-2.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۱۰٪</span>
@@ -425,7 +425,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/02-2.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/02-2.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۳٪</span>
@@ -477,7 +477,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/03-2.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/03-2.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۱۶٪</span>
@@ -529,7 +529,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/04-2.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/04-2.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer" style="opacity: 0;">
                                 <span>۳۷٪</span>
@@ -581,7 +581,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/01-3.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/01-3.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer badge-new">
                                 <span>جدید</span>
@@ -633,7 +633,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/02-4.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/02-4.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۹٪</span>
@@ -685,7 +685,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/04-4.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/04-4.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer badge-new">
                                 <span>جدید</span>
@@ -737,7 +737,7 @@
                 <div class="col-12 col-md-6 col-lg-4 col-xl-3">
                     <div class="product-cart">
                         <div class="imgbox">
-                            <img class="imgbox__image" src="images/product/03-3.jpg" alt="watch">
+                            <img class="imgbox__image" src="images/product/03-3.jpg" alt="watch" loading="lazy">
                             <div class="imgbox__container">
                                 <div class="imgbox__badge-offer">
                                 <span>۳۳٪</span>
@@ -822,14 +822,14 @@
                 <div class="product-review">
                     <div class="product-review__content">
                         <div class="product-review__content-on">
-                            <a href="#"><img src="images/nixon.png" alt="nixon"></a>
+                            <a href="#"><img src="images/nixon.png" alt="nixon" loading="lazy"></a>
                             <h3>نیکسون از سال 1989</h3>
                             <h4>نیکسون بهترین برند لوازم جانبی سبک زندگی برای افراد مستقل، خلاق و آزاداندیش در سراسر جهان بوده است.</h4>
                             <h5>برند نیکسون در کالیفرنیا به عنوان یک خط بوتیک ساعت به طور انحصاری در خرده فروشی های ورزشی و مد فروخته می شد، اکنون مجموعه کاملی از ساعت ها، کیف ها، کالاهای چرمی و لوازم جانبی است.</h5>
                         </div>    
                     </div>
                     <div class="product-review-row1">
-                        <img class="product-review-row1__image" src="images/81b7872a26232a15336d.webp" alt="nixon">
+                        <img class="product-review-row1__image" src="images/81b7872a26232a15336d.webp" alt="nixon" loading="lazy">
                         <div class="product-review-row1__content">
                             <li>تیم طراحی شده، <span> سفارشی</span>  ساخته شده است</li>
                             <h4>شعار ما از ابتدا این بود که از استعداد تیم مان برای زنده کردن چشم انداز مان استفاده کنیم. ما با گروه متنوعی از ورزشکاران، موسیقی‌ دانان، سازندگان، هنرمندان و فعالانی کار کرده‌ایم.</h4>
@@ -837,7 +837,7 @@
                         </div>
                     </div>
                     <div class="product-review-row2">
-                        <img class="product-review-row2__image" src="images/4.webp" alt="nixon">
+                        <img class="product-review-row2__image" src="images/4.webp" alt="nixon" loading="lazy">
                         <div class="product-review-row2__content">
                             <li>نیکسون آماده برای جنگ با  <span> مقاومت و سختی </span></li>
                             <h4>ساعت های نیکسون یکی از مقاوم ترین ساعت ها در جهان هستند که با توجه به متریال بکار رفته در آن ها  این مقاومت  را جندین برابر می کند.</h4>
@@ -850,7 +850,7 @@
         <div class="hero">
             <div class="container">
               <div class="hero-img">
-                <img src="images/back-to-grind-t1-mock-Desktop_1920x.progressive.jpg" alt="" />
+                <img src="images/back-to-grind-t1-mock-Desktop_1920x.progressive.jpg" alt="Nixon" loading="lazy" />
               </div>
               <div class="hero-details">
                 <h4>بهترین تابستان را برای خودتان بسازید </h4>
@@ -877,37 +877,37 @@
                 </div>
                 <div class="instagram-photo-imgbox">
                     <a href="#" class="instagram-photo-imgbox__image">
-                        <img src="images/instagram/01.jpg" alt="">
+                        <img src="images/instagram/01.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
                     </a>
                     <a href="#" class="instagram-photo-imgbox__image">
-                        <img src="images/instagram/02.jpg" alt="">
+                        <img src="images/instagram/02.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
                     </a>
                     <a href="#" class="instagram-photo-imgbox__image">
-                        <img src="images/instagram/03.jpg" alt="">
+                        <img src="images/instagram/03.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
                     </a>
                     <a href="#" class="instagram-photo-imgbox__image">
-                        <img src="images/instagram/04.jpg" alt="">
+                        <img src="images/instagram/04.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
                     </a>
                     <a href="#" class="instagram-photo-imgbox__image">
-                        <img src="images/instagram/05.jpg" alt="">
+                        <img src="images/instagram/05.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
                     </a>
                     <a href="#" class="instagram-photo-imgbox__image col-xl-2">
-                        <img src="images/instagram/06.jpg" alt="">
+                        <img src="images/instagram/06.jpg" alt="Nixon" loading="lazy">
                         <span class="instagram-photo-imgbox__icon">
                             <i class="fa-brands fa-instagram"></i>
                         </span>
@@ -1042,7 +1042,7 @@
                         </div>
                         <div class="footer-pay-namad">
                             <a class="footer-pay-namad__item" href="#">
-                                <img src="images/icon/zarin-pal2.png" alt="">
+                                <img src="images/icon/zarin-pal2.png" alt="" loading="lazy">
                             </a>
                         </div>
                     </div>
